--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premium Hub</title>
+    <meta name="author" content="Premium Hub">
+    <meta name="keywords" content="Premium Hub, digital tools, services, premium, tools, services, digital life">
+    <meta name="description" content="Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform.">
+    <link rel="canonical" href="https://premium-hub.homehelpexperts.shop/" />
+    <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
   </head>
   <body>
     <div id="root"></div>
