Add Google Analytics tracking code to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <meta name="publisher" content="Premium Hub" />
     <link rel="canonical" href="https://premium-hub.homehelpexperts.shop/" />
     <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VVPP7KP1T8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VVPP7KP1T8');
+    </script>
   </head>
   
   <body>
