feat: Introduce Testimonials and Blog features with Contentful integration, refactor data handling, and update UI components.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Premium Hub" />
-    <meta name="keywords" content="Premium Hub, digital tools, services, premium, tools, services, digital life" />
-    <meta name="description" content="Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform." />
-    <meta name="robots" content="index, follow" />
-    <meta name="publisher" content="Premium Hub" />
-    <link rel="canonical" href="https://premium-hub.homehelpexperts.shop/" />
-    <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VVPP7KP1T8"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'G-VVPP7KP1T8');
-    </script>
-  </head>
-  
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Premium Hub" />
+  <meta name="keywords" content="Premium Hub, digital tools, services, premium, tools, services, digital life" />
+  <meta name="description"
+    content="Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform." />
+  <meta name="robots" content="index, follow" />
+  <meta name="publisher" content="Premium Hub" />
+  <link rel="canonical" href="https://premium-hub.homehelpexperts.shop/" />
+  <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
+
+  <!-- Preconnect to required origins -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" />
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
+  <link rel="preconnect" href="https://placehold.co" />
+  <link rel="dns-prefetch" href="https://placehold.co" />
+  <link rel="preconnect" href="https://cdn.contentful.com" />
+  <link rel="dns-prefetch" href="https://cdn.contentful.com" />
+  <link rel="preconnect" href="https://images.ctfassets.net" />
+  <link rel="dns-prefetch" href="https://images.ctfassets.net" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VVPP7KP1T8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VVPP7KP1T8');
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
