--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="canonical" href="https://premium-hub.homehelpexperts.shop/" />
   <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
 
+  <!-- Preload Critical Font -->
+  <link rel="preload" href="/src/assets/Fonts/custom1.woff2" as="font" type="font/woff2" crossorigin />
+
   <!-- Preconnect to required origins -->
   <link rel="preconnect" href="https://www.googletagmanager.com" />
   <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
