--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <link rel="dns-prefetch" href="https://cdn.contentful.com" />
   <link rel="preconnect" href="https://images.ctfassets.net" />
   <link rel="dns-prefetch" href="https://images.ctfassets.net" />
+  <link rel="preconnect" href="https://i.pravatar.cc" />
+  <link rel="dns-prefetch" href="https://i.pravatar.cc" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-VVPP7KP1T8"></script>
   <script>
