feat: update WhatsApp contact number, canonical URL, and add schema markup for improved SEO.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform." />
   <meta name="robots" content="index, follow" />
   <meta name="publisher" content="Premium Hub" />
-  <link rel="canonical" href="https://premium-hub.homehelpexperts.shop/" />
+  <link rel="canonical" href="https://premiumhub.click/" />
   <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
 
   <!-- Preload Critical Font -->
@@ -28,7 +28,35 @@
   <link rel="dns-prefetch" href="https://images.ctfassets.net" />
   <link rel="preconnect" href="https://i.pravatar.cc" />
   <link rel="dns-prefetch" href="https://i.pravatar.cc" />
-  
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Premium Hub",
+      "url": "https://premiumhub.click/",
+      "logo": "https://premiumhub.click/favicon.ico",
+      "description": "Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform.",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91 9029151181",
+        "contactType": "customer service"
+      }
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Premium Hub",
+      "url": "https://premiumhub.click/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://premiumhub.click/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+  </script>
 </head>
 
 <body>
