chore: Update site domain from premiumhub.click to www.premiumtoolshub.in across all relevant files and configurations.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform." />
   <meta name="robots" content="index, follow" />
   <meta name="publisher" content="Premium Hub" />
-  <link rel="canonical" href="https://premiumhub.click/" />
+  <link rel="canonical" href="https://www.premiumtoolshub.in/" />
   <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
 
   <!-- Preload Critical Font -->
@@ -34,8 +34,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Premium Hub",
-      "url": "https://premiumhub.click/",
-      "logo": "https://premiumhub.click/favicon.ico",
+      "url": "https://www.premiumtoolshub.in/",
+      "logo": "https://www.premiumtoolshub.in/favicon.ico",
       "description": "Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform.",
       "contactPoint": {
         "@type": "ContactPoint",
@@ -49,10 +49,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Premium Hub",
-      "url": "https://premiumhub.click/",
+      "url": "https://www.premiumtoolshub.in/",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://premiumhub.click/?q={search_term_string}",
+        "target": "https://www.premiumtoolshub.in/?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
