feat: Rename 'Premium Hub' to 'Premium Tools Hub' across the application, update branding assets, and introduce a new logo.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Premium Hub" />
-  <meta name="keywords" content="Premium Hub, digital tools, services, premium, tools, services, digital life" />
+  <meta name="author" content="Premium Tools Hub" />
+  <meta name="keywords" content="Premium Tools Hub, digital tools, services, premium, tools, services, digital life" />
   <meta name="description"
-    content="Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform." />
+    content="Premium Tools Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform." />
   <meta name="robots" content="index, follow" />
-  <meta name="publisher" content="Premium Hub" />
+  <meta name="publisher" content="Premium Tools Hub" />
   <link rel="canonical" href="https://www.premiumtoolshub.in/" />
-  <title>Premium Hub | Premium Digital Tools & Services for Every Need</title>
+  <title>Premium Tools Hub | Premium Digital Tools & Services for Every Need</title>
 
   <!-- Preload Critical Font -->
   <link rel="preload" href="/src/assets/Fonts/custom1.woff2" as="font" type="font/woff2" crossorigin />
@@ -33,10 +33,10 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "Premium Hub",
+      "name": "Premium Tools Hub",
       "url": "https://www.premiumtoolshub.in/",
       "logo": "https://www.premiumtoolshub.in/favicon.ico",
-      "description": "Premium Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform.",
+      "description": "Premium Tools Hub offers top digital tools & services to boost productivity, creativity, and security—all in one easy-to-access platform.",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+91 9029151181",
@@ -48,7 +48,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "Premium Hub",
+      "name": "Premium Tools Hub",
       "url": "https://www.premiumtoolshub.in/",
       "potentialAction": {
         "@type": "SearchAction",
