feat: add Google Analytics 4 tracking script to `index.html`

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <link rel="canonical" href="https://www.premiumtoolshub.in/" />
   <title>Premium Tools Hub | Premium Digital Tools & Services for Every Need</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MDDKBJRTXM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-MDDKBJRTXM');
+  </script>
+
   <!-- Preload Critical Font -->
   <link rel="preload" href="/src/assets/Fonts/custom1.woff2" as="font" type="font/woff2" crossorigin />
 
