feat: Add ContentSquare analytics script to `index.html`.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     gtag('config', 'G-MDDKBJRTXM');
   </script>
 
+  <!-- ContentSquare -->
+  <script src="https://t.contentsquare.net/uxa/dc32ee15686d3.js"></script>
+
   <!-- Preload Critical Font -->
   <link rel="preload" href="/src/assets/Fonts/custom1.woff2" as="font" type="font/woff2" crossorigin />
 
