feat: add Google Analytics event tracking for form submissions.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     gtag('config', 'G-MDDKBJRTXM');
   </script>
 
+  <script>
+    gtag('event', 'form_submit', {
+      page_location: window.location.href
+    });
+  </script>
+  
   <!-- ContentSquare -->
   <script src="https://t.contentsquare.net/uxa/dc32ee15686d3.js"></script>
 
